--- a/examples/index.html
+++ b/examples/index.html
@@ -27,10 +27,9 @@
     <title>DAPjs Demos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #aaa; text-align: center; }
+        body { font-family: Roboto, sans-serif; color: #aaa; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
         ul { list-style-type: none; padding: 0; }
