--- a/examples/daplink-flash/web.html
+++ b/examples/daplink-flash/web.html
@@ -27,10 +27,9 @@
     <title>DAPjs Demo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
+        body { font-family: Roboto, sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
         #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #072b44; outline-offset: -10px; }
@@ -51,7 +50,7 @@
 </head>
 
 <body>
-    <h1>DAPjs WebUSB Flash</h1>
+    <h1>DAPjs WebHID Flash</h1>
     <div id="drop">
 		<svg id="icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43">
             <path d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"/>
@@ -127,10 +126,13 @@
             setTransfer();
 
             try {
-                const device = await navigator.usb.requestDevice({
-                    filters: [{vendorId: 0xD28}]
+                const devices = await navigator.hid.requestDevice({
+                    filters: [{vendorId: 0x1209, usagePage: 0xff00, usage: 0x0002}]
                 });
-                await update(device);
+                devices[0].oninputreport = event => {
+                    console.log(event.data);
+                }
+                await update(devices[0]);
             } catch (error) {
                 statusEl.style.visibility = "hidden";
                 setStatus(error);
@@ -141,7 +143,7 @@
         const update = async device => {
             if (!buffer) return;
 
-            const transport = new DAPjs.WebUSB(device);
+            const transport = new DAPjs.WebHID(device);
             const target = new DAPjs.DAPLink(transport);
 
             target.on(DAPjs.DAPLink.EVENT_PROGRESS, progress => {
