--- a/examples/daplink-flash/web.html
+++ b/examples/daplink-flash/web.html
@@ -27,10 +27,9 @@
     <title>DAPjs Demo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
+        body { font-family: Roboto, sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
         #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #072b44; outline-offset: -10px; }
