--- a/examples/daplink-flash/web.html
+++ b/examples/daplink-flash/web.html
@@ -66,6 +66,10 @@
             <button id="button">Select Device</button>
         </div>
 
+        <div id="select">
+            <button id="button2">Reset Target</button>
+        </div>
+
         <div id="status">
             <div id="bar"></div>
             <div id="transfer"></div>
@@ -85,6 +89,7 @@
         let fileEl = document.getElementById("file");
         let selectEl = document.getElementById("select");
         let buttonEl = document.getElementById("button");
+        let buttonReset = document.getElementById("button2");
         let labelEl = document.getElementById("label");
         let statusEl = document.getElementById("status");
         let transferEl = document.getElementById("transfer");
@@ -139,6 +144,23 @@
             }
         }
 
+        // reset device
+        const resetDevice = async () => {
+            setStatus("Reseting device...");
+            try {
+                const devices = await navigator.hid.requestDevice({
+                    filters: [{vendorId: 0x1209, usagePage: 0xff00, usage: 0x0002}]
+                });
+                devices[0].oninputreport = event => {
+                    console.log(event.data);
+                }
+                await reset(devices[0]);
+            } catch (error) {
+                statusEl.style.visibility = "hidden";
+                setStatus(error);
+            }
+        }
+
         // Update a device with the firmware image
         const update = async device => {
             if (!buffer) return;
@@ -168,6 +190,22 @@
             }
         }
 
+        // reset device
+        const reset = async device => {
+            const transport = new DAPjs.WebHID(device);
+            const target = new DAPjs.CmsisDAP(transport);
+
+            try {
+                setStatus("Reseting...");
+                await target.reset();
+
+                setStatus("Reset complete!");
+            } catch (error) {
+                statusEl.style.visibility = "hidden";
+                setStatus(error);
+            }
+        }
+
         fileEl.addEventListener("change", event => {
             setImage(event.target.files[0]);
         });
@@ -177,6 +215,8 @@
         });
 
         buttonEl.addEventListener("click", selectDevice);
+
+        buttonReset.addEventListener("click", resetDevice);
 
         ["drag", "dragstart", "dragend", "dragover", "dragenter", "dragleave", "drop"].forEach(eventName => {
             dropEl.addEventListener(eventName, event => {
