--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DAPjs Demo</title>
+    <title>DAPjs测试</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<style>
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-    <h1>DAPjs WebHID Flash</h1>
+    <h1>DAPjs WebHID 测试</h1>
     <div id="drop">
 		<svg id="icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43">
             <path d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"/>
@@ -60,16 +60,16 @@
 
 		<input id="file" type="file" />
 		<label id="label" for="file">
-            <strong>Choose a firmware image</strong>
-            <span>or drag it here</span>
+            <strong>选择一个固件文件</strong>
+            <span>或 拖入此处</span>
         </label>
 
         <div id="select">
-            <button id="button">Select Device</button>
+            <button id="button">选择烧录设备</button>
         </div>
 
         <div id="select2">
-            <button id="button2">Reset Target</button>
+            <button id="button2">选择强制重启设备</button>
         </div>
 
         <div id="status">
